// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateSelector > should render correctly when disabled 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0 "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class="govuk-date-input flex flex-row [&_.MuiSvgIcon-root]:fill-govBlue"
        >
          <div
            class="govuk-date-input__item govuk-!-margin-right-0 "
          >
            <div
              class=""
            >
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-6 "
                disabled=""
                id="field-1-input"
                name="field1"
                placeholder="N/A"
                type="tel"
                value="01/01/2024"
              />
            </div>
          </div>
          <div
            class="flex items-end pb-5"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose date, selected date is Jan 1, 2024"
                class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="CalendarIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector > should render correctly with an input 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0 "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class="govuk-date-input flex flex-row [&_.MuiSvgIcon-root]:fill-govBlue"
        >
          <div
            class="govuk-date-input__item govuk-!-margin-right-0 "
          >
            <div
              class=""
            >
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-6 "
                id="field-1-input"
                name="field1"
                placeholder="DD/MM/YYYY"
                type="tel"
                value="01/01/2024"
              />
            </div>
          </div>
          <div
            class="flex items-end pb-5"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose date, selected date is Jan 1, 2024"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="CalendarIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group govuk-form-group--error"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0 "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class="govuk-date-input flex flex-row [&_.MuiSvgIcon-root]:fill-govBlue"
        >
          <div
            class="govuk-date-input__item govuk-!-margin-right-0 "
          >
            <div
              class=""
            >
              <span
                class="govuk-error-message"
                id="field1-error"
              >
                <span
                  class="govuk-visually-hidden"
                >
                  Error: 
                </span>
                There was an error
              </span>
              <input
                aria-describedby="field1-error"
                class="govuk-input govuk-date-input__input govuk-input--width-6  govuk-input--error"
                id="field-1-input"
                name="field1"
                placeholder="DD/MM/YYYY"
                type="tel"
                value=""
              />
            </div>
          </div>
          <div
            class="flex items-end pb-5"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose date"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="CalendarIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector > should render correctly with hint hidden 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0 "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint govuk-visually-hidden"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class="govuk-date-input flex flex-row [&_.MuiSvgIcon-root]:fill-govBlue"
        >
          <div
            class="govuk-date-input__item govuk-!-margin-right-0 "
          >
            <div
              class=""
            >
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-6 "
                id="field-1-input"
                name="field1"
                placeholder="DD/MM/YYYY"
                type="tel"
                value=""
              />
            </div>
          </div>
          <div
            class="flex items-end pb-5"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose date"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="CalendarIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector > should render correctly with no input 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0 "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class="govuk-date-input flex flex-row [&_.MuiSvgIcon-root]:fill-govBlue"
        >
          <div
            class="govuk-date-input__item govuk-!-margin-right-0 "
          >
            <div
              class=""
            >
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-6 "
                id="field-1-input"
                name="field1"
                placeholder="DD/MM/YYYY"
                type="tel"
                value=""
              />
            </div>
          </div>
          <div
            class="flex items-end pb-5"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose date"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="CalendarIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
